# solid-priciples-fastapi

./: .gitignore  Makefile  README.md  client.http  codecov.yml  main.py  pyproject.toml  pytest.ini  ruff.toml  seed.py
.github/workflows/: tests.yml
app/: database.py
app/controllers/: user_controller.py
app/dependencies/: container.py
app/exceptions/: __init__.py  user_exceptions.py
app/models/: __init__.py  db_models.py  user.py
app/repositories/: base.py  user_repository.py
app/services/: __init__.py  base.py  user_service.py
tests/: conftest.py  factories.py  helpers.py
tests/e2e/: test_user_endpoints.py  test_user_endpoints_errors.py
tests/integration/: test_user_flow.py
tests/unit/: test_container.py  test_database.py  test_exceptions.py  test_models.py  test_user_controller.py  test_user_flow.py  test_user_repository.py  test_user_service.py
