[project]
name = "solid-priciples-fastapi"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "faker>=37.11.0",
    "fastapi>=0.118.3",
    "pydantic[email]>=2.12.0",
    "python-multipart>=0.0.20",
    "ruff>=0.14.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
